polish: Lost City (#2601)
* refactor: modernize

* test: opt into sidebar test

* fix: add missing sidebar steps

Also adds the dramen branch as a requirement in the `getAnotherBranch` step so it gets highlighted

Also checks for the dramen staff & branch in the bank before entering zanaris in case the user paused quest

* fix: highlight quest start dialog option

* Mark safe spot

* Highlight dramen staff/knife/dramen branch